--- a/onec-mid-base-11/src/Catalogs/Контрагенты/Forms/ФормаЭлемента/Form.form
+++ b/onec-mid-base-11/src/Catalogs/Контрагенты/Forms/ФормаЭлемента/Form.form
@@ -542,6 +542,11 @@
   <enabled>true</enabled>
   <showTitle>true</showTitle>
   <showCloseButton>true</showCloseButton>
+  <mobileDeviceCommandBarContent>
+    <value xsi:type="core:NumberValue">
+      <value>10</value>
+    </value>
+  </mobileDeviceCommandBarContent>
   <attributes>
     <name>Объект</name>
     <id>1</id>
